--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <h1>Hola, mundo!</h1>
+    <h1>Iván David De La Rosa Suárez</h1>
     <p>Esta es una página HTML básica. </p>
 </body>
 </html>
