--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Iván David De La Rosa Suárez</h1>
-    <p>Esta es una página HTML básica. </p>
+    <p>Me considero una persona bastante sociable, amigable y sujeto a cambios. No soy mucho de fiestas porque no siento que realmente es algo que me llame la atención asi que pregiero quedarme en mi casa jugando videojuegos o viendo alguna pelicula o serie. </p>
 </body>
 </html>
