Lista de habilidades

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Iván David De La Rosa Suárez</h1>
     <p>Me considero una persona bastante sociable, amigable y sujeto a cambios. No soy mucho de fiestas porque no siento que realmente es algo que me llame la atención asi que pregiero quedarme en mi casa jugando videojuegos o viendo alguna pelicula o serie. </p>
     <p>Me gusta mucho mi carrera ya que en ella he encotrado mi pasión que es la programación y suelo ponerle bastante empeño, sé que no es para nada fácil pero tampoco es imposible. No practico algún deporte por así decirlo pero si me gusta mucho jugar ping pong con amigos y es algo que suelo frecuentar en mi trabajo como distracción.</p>
+    <h2>Lista de habilidades</h2>
 </body>
 </html>
