--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <li>
             <strong>Nombre:</strong> Cien años de soledad  
             <br><strong>Autor:</strong> Gabriel García Márquez
-            <br><img src="C:\Users\darme\OneDrive\Escritorio\Ejercicio_1\portada_cien_anos_de_soledad_0.jpg" alt="Portada de Cien años de soledad">
+            <br><img src="C:\portada_cien_anos_de_soledad_0.jpg" alt="Portada de Cien años de soledad">
         </li>
 
         <li>
             <strong>Nombre:</strong> El principito  
             <br><strong>Autor:</strong> Antoine de Saint-Exupéry  
-            <br><img src="C:\Users\darme\OneDrive\Escritorio\Ejercicio_1\9789877979015-.jpeg" alt="Portada de El principito">
+            <br><img src="C:\9789877979015-.jpeg" alt="Portada de El principito">
         </li>
     </ul>
 </body>
