--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>
             <strong>Nombre:</strong> Cien años de soledad  
             <br><strong>Autor:</strong> Gabriel García Márquez
-            <br><img src="C:\portada_cien_anos_de_soledad_0.jpg" alt="Portada de Cien años de soledad">
+            <br><img src="https://images.cdn3.buscalibre.com/fit-in/360x360/61/8d/618d227e8967274cd9589a549adff52d.jpg" alt="Portada de Cien años de soledad">
         </li>
 
         <li>
